Fix overflow on IntersectionObserver anim HomeNav

--- a/Web/src/styles/css/index.css
+++ b/Web/src/styles/css/index.css
@@ -323,6 +323,7 @@ body, #root {
   display: grid;
   position: relative;
   grid-template-columns: 1fr 1fr;
+  overflow: hidden;
 }
 .home-navigation-or {
   position: absolute;
