--- a/Web/src/styles/sass/Layouts/HomeNavigation.scss
+++ b/Web/src/styles/sass/Layouts/HomeNavigation.scss
@@ -5,6 +5,7 @@
     display: grid;
     position: relative;
     grid-template-columns: 1fr 1fr;
+    overflow: hidden;
 
     &-or {
         @include center-absol;
